[package]
name = "haversine"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.172"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utf8-chars = "3.0.5"
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.mach]
version = "0.3"

[dev-dependencies]
rstest = "0.24.0"

#![recursion_limit = "256"]
